feat: Sales and inquiries
